2010-02-19 tzoscott
  * #672258, added Views2 support. Does not handle multiple ingredients well..
	
2010-02-19 jvandervort
  * index screen separation and beautification.

2010-02-16 tzoscott
  * #716556, added jvandervort to README. Updated README and INSTALL

2010-02-16 tzoscott
  * #712780, Added #description help to import text

2010-02-16 jvandervort
  * rss feed doesn't work.
  * recipe page not showing latest recipes when there is a vocab assigned to recipes, but recipe does not contain any terms.
  * #712814, added t() to drupal_set_messages.
  * #31757 by duso, added recipeML bulk import.

2010-02-12 jvandervort
  * recipe export should respect the published status field.
  * #712778, invalid argument when importing a text recipe without ingredients.
  * added multi-recipe export for plaintext.
  * #712786, plaintext import should handle ingredients without units.
  * #369313, custom yield should carryover into html export.
  * added multi-recipe export for mastercook4.
  * recipes menu should be a normal menu item.

2010-02-11 jvandervort
  * begin simplifying the decimal to fraction conversion routines.
  * #348733, hook_update does not add missing recipe table entries.
  * created a mini template system for mastercook4 exporting.

2010-02-10 jvandervort
  * #166879, muliple taxonomy terms not showing in summary.
  * added a recipe save error message when yield is not a positive integer.
  * #348733, recipe yield field should be an integer.

2010-02-10 tzoscott
  * recipe.install, recipe.admin.inc: #709074 Added dsm() on modules/list if recipe mode is 'simple' (for future #699112 patch)

2010-02-09 jvandervort
  * added db update function for recipe5.x to recipe6.x conversion.
  * added more error handling for recipe import.
  * added coloring to recipe import preview.
  * added "export recipes" perm to export call in hook_menu.
  * moved export html and export recipeML into their own modules.