@@ -1,41 +1,53 @@
 /* $Id$ */
 
+
+/* Summary Box */
 .recipe-summary {
   float: right;
+  width: 38%;
   margin: 0 0 1em 1em;
 }
-
 .recipe-summary table {
   border-collapse: collapse;
 }
-
 .recipe-summary td,
 .recipe-summary th {
   border: 1px solid #aaa;
   padding: .2em;
 }
-
 .recipe-summary th {
   background: #eee;
 }
 
-.recipe-ingredients acronym {
-  border-bottom: 1px dotted #333;
-  cursor: help;
-}
 
+/* Ingredient List in Recipe view */
+.recipe-ingredients {
+  width:60%;
+}
+.recipe-ingredients table {
+  margin:0;
+  padding:0;
+}
+.recipe-ingredients table tbody {
+  border-style:none;
+}
 .recipe-ingredients .qty {
-  float:left;
+  vertical-align:top;
   text-align:right;
-  width:5.5em;
   white-space:nowrap;
+  padding: 0 0.2em;
 }
-
-.recipe-ingredients .acronym-wrap {
-  float:left;
+.recipe-ingredients .acronym {
+  vertical-align:top;
   text-align:left;
-  width:2em;
-  padding-left: 0.5em;
+  padding: 0 0.5em;
+  /* cursor: help;  WHY?*/
+}
+.recipe-ingredients .ingredient {
+  vertical-align:top;
+  text-align:left;
+  padding: 0 0.5em;
+  /* cursor: help;  WHY?*/
 }
 
 #recipe_custom_yield fieldset .form-item {
