@@ -1,3 +1,7 @@
+2010-02-22 jvandervort
+  * changed recipe index page callback to drupal_get_form.
+  * changed recipe index page permission to "access content".
+  * added theme function for ingredient list on recipe view.
 2010-02-19 tzoscott
   * #672258, added Views2 support. Does not handle multiple ingredients well..
 	
